--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "php": "^7.3 || ^8.0",
         "codeigniter4/framework": "^4",
         "dompdf/dompdf": "^1.1",
-        "snapappointments/bootstrap-select": "^1.13",
-        "myth/auth": "^1.0"
+        "snapappointments/bootstrap-select": "^1.13"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
