--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ CI_ENVIRONMENT = development
 # APP
 #--------------------------------------------------------------------
 
-# app.baseURL = ''
+app.baseURL = 'http://localhost:8080'
 # app.forceGlobalSecureRequests = false
 
 # app.sessionDriver = 'CodeIgniter\Session\Handlers\FileHandler'
@@ -45,13 +45,13 @@ database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 
 # database.tests.hostname = localhost
-# database.tests.database = ci4
+# database.tests.database = utvmn4ak_sentracomputer
 # database.tests.username = root
-# database.tests.password = root
+# database.tests.password = Stimik1011
 # database.tests.DBDriver = MySQLi
 # database.tests.DBPrefix =
 
-#--------------------------------------------------------------------
+# #--------------------------------------------------------------------
 # CONTENT SECURITY POLICY
 #--------------------------------------------------------------------
 
